$Id: CHANGES,v 1.79 2009/01/21 20:11:28 psavola Exp $

28/10/2008	Release 1.2.

14/10/2008	Accept virtually any interface name (up to 15 chars) instead of
		forcing a specific naming convention.  Patch from
		Michiel Brandenburg.

		If stale radvd.pid file exists, try to overwrite it unless
		the specified PID exists, from Fedora (Martin Nagy).

		Define _GNU_SOURCE on Linux, otherwise glibc >= 2.8
		compilation fails.

		Remove -Wconversion from default CFLAGS as it is very noisy.
		Fix some warnings, from Jim Paris.

31/03/2008	Update references to RFCs.  Give pointer to the "two hour rule".
		Decrease the default valid and preferred lifetimes from 30/1
		days to 1day/4hours, respectively.  See more info at:

		http://lists.litech.org/pipermail/radvd-devel-l/2007-October/000282.html

04/02/2008	Release 1.1.

24/01/2008	Implement privilege separation (Linux only) so that
		config_interface() works both with a user and root,
		even after HUP signal.  Work by Jim Paris.

24/01/2008      The old Linux retrans_timer proc value is given in
		USER_HZ, not in seconds.  Fix that, by Jim Paris.

21/01/2008	Fix stderr+syslog logging crash (on non-i386).  Analysis and
		patch by Jim Paris (Debian bug #409600).

01/12/2007	Require that interface is also 'RUNNING' instead of just
		'UP', except if IgnoreIfMissing is enabled.  The reason is
		that at least some recent Linux kernels do not generate
		link-local addresses before interface is running and as
		a result, the startup may fail if network cable is unplugged
		in any case.

		Note: this could break deployments with some very old 
                kernels, see more info at:

		http://lists.litech.org/pipermail/radvd-devel-l/2007-October/000280.html

25/10/2007	Implement automatically selecting and advertising an
                interface address, see radvd.conf(5) for more.  Add
		a warning about not being able to set interface
		variables with non-root user.  Relax interface naming
                a bit.
